Changed List.of to Arrays.asList since IntelliJ can't resolve List.of